# coordin8

./: .dockerignore  .gitignore  .mise.toml  CLAUDE.md  Dockerfile.djinn  Dockerfile.greeter  LICENSE  Makefile  NOTICE  README.md  WORKFLOW.example.md  coordin8-design-napkin.md  docker-compose.yml
.claude/agents/: builder.md  documenter.md  preflight.md  reviewer.md  test-runner.md
.claude/plans/: PRD.md
.claude/plans/auction-house/: PRD.md
.claude/plans/djinn-split/: PRD.md  session-1-complete.md  session-1-prep.md
.claude/plans/docker-support/: next-session-prep.md  session-complete.md
.claude/plans/eventmgr/: PRD.md  decisions.md  session-1-complete.md  session-1-prep.md
.claude/plans/ministack-migration/: PRD.md  session-1-complete.md  session-2-prep.md
.claude/plans/phase2-spec-alignment/: session-1-complete.md  session-1-prep.md  session-2-prep.md
.claude/plans/phase3-cloud-topology/: concept.md  resilience-plan.md  session-1-prep.md
.claude/plans/service-discovery/: PRD.md
.claude/plans/smart-proxy/: PRD.md
.claude/plans/space/: PRD.md  decisions.md  session-1-complete.md
.claude/plans/txn-event/: next-session-prep.md  session-1-complete.md
.claude/skills/event-provider/: SKILL.md
.claude/skills/lease-provider/: SKILL.md
.claude/skills/pane-peek/: SKILL.md
.claude/skills/pane-run/: SKILL.md
.claude/skills/provider-wiring/: SKILL.md
.claude/skills/registry-provider/: SKILL.md
.claude/skills/space-provider/: SKILL.md
.claude/skills/stack-down/: SKILL.md
.claude/skills/stack-up/: SKILL.md
.claude/skills/txn-provider/: SKILL.md
.github/assets/: coordin8-logo.md
.github/workflows/: ci.yml
cli/: README.md  go.mod
cli/cmd/coordin8/: main.go  space.go
djinn/: Cargo.toml  README.md
djinn/crates/coordin8-bootstrap/: Cargo.toml
djinn/crates/coordin8-bootstrap/src/: lib.rs
djinn/crates/coordin8-core/: Cargo.toml  README.md
djinn/crates/coordin8-core/src/: error.rs  event.rs  lease.rs  lib.rs  registry.rs  space.rs  txn.rs
djinn/crates/coordin8-djinn/: Cargo.toml  README.md
djinn/crates/coordin8-djinn/src/: lib.rs  main.rs  services.rs
djinn/crates/coordin8-djinn/tests/: split_bootstrap.rs  split_chaos.rs  split_event.rs  split_phase0.rs  split_phase1.rs  split_proxy.rs  split_remote_leasing.rs  split_space.rs  split_space_txn.rs  split_txn.rs
djinn/crates/coordin8-event/: Cargo.toml  README.md
djinn/crates/coordin8-event/src/: lib.rs  manager.rs  service.rs
djinn/crates/coordin8-event/tests/: demo.rs
djinn/crates/coordin8-lease/: Cargo.toml  README.md
djinn/crates/coordin8-lease/src/: lib.rs  manager.rs  reaper.rs  service.rs
djinn/crates/coordin8-proto/: Cargo.toml  README.md  build.rs
djinn/crates/coordin8-proto/src/: lib.rs
djinn/crates/coordin8-proxy/: Cargo.toml  README.md
djinn/crates/coordin8-proxy/src/: lib.rs  local_resolver.rs  manager.rs  service.rs
djinn/crates/coordin8-registry/: Cargo.toml  README.md
djinn/crates/coordin8-registry/src/: lib.rs  matcher.rs  service.rs  store.rs
djinn/crates/coordin8-space/: Cargo.toml  README.md
djinn/crates/coordin8-space/src/: lib.rs  manager.rs  participant.rs  service.rs
djinn/crates/coordin8-space/tests/: demo.rs
djinn/crates/coordin8-txn/: Cargo.toml  README.md
djinn/crates/coordin8-txn/src/: lib.rs  manager.rs  service.rs
djinn/crates/coordin8-txn/tests/: demo.rs
djinn/providers/dynamo/: Cargo.toml  README.md
djinn/providers/dynamo/src/: client.rs  event_store.rs  lease_store.rs  lib.rs  registry_store.rs  space_store.rs  table.rs  txn_store.rs
djinn/providers/local/: Cargo.toml  README.md
djinn/providers/local/src/: event_store.rs  lease_store.rs  lib.rs  registry_store.rs  space_store.rs  txn_store.rs
examples/auction-house/: Dockerfile.auction-board  Dockerfile.auction-service  Dockerfile.settlement-engine  README.md  docker-compose.yml
examples/auction-house/auction-board/: package.json  tsconfig.json
examples/auction-house/auction-board/public/: app.js  index.html
examples/auction-house/auction-board/src/: server.ts
examples/auction-house/auction-service/: build.gradle  settings.gradle
examples/auction-house/auction-service/src/main/java/io/coordin8/examples/auction/: AuctionService.java
examples/auction-house/settlement-engine/: go.mod  main.go
examples/double-entry/: README.md  go.mod  main.go
examples/hello-coordin8/: README.md  go.mod
examples/hello-coordin8-java/: build.gradle  settings.gradle
examples/hello-coordin8-java/src/main/java/io/coordin8/examples/: GreeterClient.java
examples/hello-coordin8-node/: package.json
examples/hello-coordin8-node/src/: greeter-client.ts
examples/hello-coordin8/go/: go.mod
examples/hello-coordin8/go/greeter_client/: main.go
examples/hello-coordin8/go/greeter_service/: main.go
examples/hello-coordin8/go/proto/: greeter.proto
examples/hello-coordin8/greeter_client/: main.go
examples/hello-coordin8/greeter_service/: main.go
examples/hello-coordin8/java/: build.gradle  settings.gradle
examples/hello-coordin8/node/: package-lock.json  package.json
examples/hello-coordin8/node/src/: greeter-client.ts
examples/market-watch/: README.md  go.mod  main.go
infra/: README.md  dynamodb-tables.cfn.yml
proto/: README.md
proto/coordin8/: common.proto  event.proto  lease.proto  proxy.proto  registry.proto  space.proto  transaction.proto
sdks/go/: README.md  go.mod
sdks/go/coordin8/: client.go  discovery.go  event.go  lease.go  proxy.go  registry.go  space.go
sdks/java/: README.md  build.gradle  settings.gradle
sdks/java/src/main/java/io/coordin8/: DjinnClient.java  EventClient.java  LeaseClient.java  ProxyClient.java  RegistryClient.java  ServiceDiscovery.java  SpaceClient.java
sdks/node/: README.md  package-lock.json  package.json  tsconfig.json
sdks/node/src/: djinn-client.ts  event-client.ts  index.ts  lease-client.ts  proxy-client.ts  registry-client.ts  service-discovery.ts  space-client.ts
