[package]
name = "coordin8-provider-dynamo"
version = "0.1.0"
edition = "2021"

[dependencies]
coordin8-core = { workspace = true }
coordin8-registry = { path = "../../crates/coordin8-registry" }
aws-sdk-dynamodb = { workspace = true }
aws-config = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
