[package]
name = "coordin8-provider-local"
version = "0.1.0"
edition = "2021"

[dependencies]
coordin8-core = { workspace = true }

async-trait = { workspace = true }
tokio       = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
dashmap     = { workspace = true }
